Fix dark mode sticker table header color

--- a/packages/documentation/src/styles/rafiki.css
+++ b/packages/documentation/src/styles/rafiki.css
@@ -102,7 +102,7 @@
 
 .overflow-table thead th {
   position: sticky;
-  background-color: var(--sl-color-gray-7);
+  background-color: var(--sl-color-gray-7, var(--sl-color-gray-6));
   top: 0;
 }
 
